--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CredScanner - Fake News Detector</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
@@ -53,11 +53,6 @@
           <i class="fas fa-brain"></i>
           <h3>AI-Powered</h3>
           <p>Advanced machine learning</p>
-        </div>
-        <div class="feature">
-          <i class="fas fa-shield-check"></i>
-          <h3>Reliable</h3>
-          <p>Trusted accuracy</p>
         </div>
       </div>
     </div>
